--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </ul>
 
 
-<!-- A R E A S of Barishal - Gouranadi-->
+    <!-- A R E A S of Barishal - Gouranadi-->
     <ul id="Barishal - Gouranadi" class="location-list">
         <li>Batajor</li>
         <li>Gouranadi Launch Ghat</li>
@@ -318,6 +318,632 @@
         <li>Tushkhali</li>
         <li>Yasinkhar Pol</li>
     </ul>
+
+
+
+    <!--C H A T T O G R A M  -->
+    <ul class="location-list">
+        <li>Anawara</li>
+        <li>Bandarban</li>
+        <li>Barakal</li>
+        <li>Barura</li>
+        <li>Basurhat</li>
+        <li>Begumganj</li>
+        <li>Bilaichhari</li>
+        <li>Boalkhali</li>
+        <li>Brahmanbaria</li>
+        <li>Brahmanpara</li>
+        <li>Burichang</li>
+        <li>Chandina</li>
+        <li>Chandpur</li>
+        <li>Char Alexgander</li>
+        <li>Chatkhil</li>
+        <li>Chattogram Sadar</li>
+        <li>Chhagalnaia</li>
+        <li>Chiringga</li>
+        <li>Chouddagram</li>
+        <li>Comilla</li>
+        <li>Coxs Bazar</li>
+        <li>Dagonbhuia</li>
+        <li>Daudkandi</li>
+        <li>Davidhar</li>
+        <li>Diginala</li>
+        <li>East Joara</li>
+        <li>Faridganj</li>
+        <li>Fatikchhari</li>
+        <li>Feni</li>
+        <li>Gorakghat</li>
+        <li>Hajiganj</li>
+        <li>Hathazari</li>
+        <li>Hatiya</li>
+        <li>Hayemchar</li>
+        <li>Homna</li>
+        <li>Jaldi</li>
+        <li>Jarachhari</li>
+        <li>Kachua</li>
+        <li>Kalampati</li>
+        <li>Kaptai</li>
+        <li>Kasba</li>
+        <li>Khagrachari</li>
+        <li>Kutubdia</li>
+        <li>Laksam</li>
+        <li>Lakshmipur</li>
+        <li>Langalkot</li>
+        <li>Laxmichhari</li>
+        <li>Lohagara</li>
+        <li>Longachh</li>
+        <li>Manikchhari</li>
+        <li>Marishya</li>
+        <li>Matiranga</li>
+        <li>Matlobganj</li>
+        <li>Mirsharai</li>
+        <li>Muradnagar</li>
+        <li>Nabinagar</li>
+        <li>Naniachhar</li>
+        <li>Noakhali</li>
+        <li>Panchhari</li>
+        <li>Pashurampur</li>
+        <li>Patiya</li>
+        <li>Rajsthali</li>
+        <li>Ramganj</li>
+        <li>Ramghar</li>
+        <li>Ramu</li>
+        <li>Rangamati</li>
+        <li>Rangunia</li>
+        <li>Raozan</li>
+        <li>Raypur</li>
+        <li>Sandwip</li>
+        <li>Sarail</li>
+        <li>Satkania</li>
+        <li>Senbag</li>
+        <li>Shahrasti</li>
+        <li>Sitakunda</li>
+        <li>Sonagazi</li>
+        <li>Teknaf</li>
+        <li>Ukhia</li>
+    </ul>
+
+    <!-- A R E A S of Anawara-->
+    <ul class="location-list">
+        <li>Anawara Battali</li>
+        <li>Anawara Paroikora</li>
+        <li>Anowara</li>
+    </ul>
+
+    <!-- A R E A S of Bandarban -->
+    <ul class="location-list">
+        <li>Alikadam</li>
+        <li>Bandarban Sadar</li>
+        <li>Naikhong</li>
+        <li>Roanchhari</li>
+        <li>Ruma</li>
+        <li>Thanchi</li>
+        <li>Thanchi Lama</li>
+    </ul>
+
+    <!-- A R E A S of Barakal -->
+    <ul class="location-list">
+        <li>Barakal Bazar</li>
+        <li>Barakal Sadar</li>
+        <li>Panchagram</li>
+    </ul>
+
+    <!-- A R E A S of Barua -->
+    <ul class="location-list">
+        <li>Barura Murdafarganj</li>
+        <li>Barura Poyalgachha</li>
+        <li>Barura Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Basurhat -->
+    <ul class="location-list">
+        <li>Basurhat Basur Hat</li>
+        <li>Basurhat Charhajari</li>
+    </ul>
+
+    <!-- A R E A S of Begumganj -->
+
+    <ul class="location-list">
+        <li>Begumganj Alaiarpur</li>
+        <li>Begumganj Amisha Para</li>
+        <li>Begumganj Banglabazar</li>
+        <li>Begumganj Bazra</li>
+        <li>Begumganj Bhabani Jibanpur</li>
+        <li>Begumganj Choumohani</li>
+        <li>Begumganj Dauti</li>
+        <li>Begumganj Durgapur</li>
+        <li>Begumganj Gopalpur</li>
+        <li>Begumganj Jamidar Hat</li>
+        <li>Begumganj Joyag</li>
+        <li>Begumganj Joynarayanpur</li>
+        <li>Begumganj Khalafat Bazar</li>
+        <li>Begumganj Khalishpur</li>
+        <li>Begumganj Maheshganj</li>
+        <li>Begumganj Mir Owarishpur</li>
+        <li>Begumganj Nadona</li>
+        <li>Begumganj Nandiapara</li>
+        <li>Begumganj Oachhekpur</li>
+        <li>Begumganj Rajganj</li>
+        <li>Begumganj Sadar</li>
+        <li>Begumganj Sonaimuri</li>
+        <li>Begumganj Tangirpar</li>
+        <li>Begumganj Thanar Hat</li>
+    </ul>
+
+
+    <!-- A R E A S of Bilaichhari -->
+    <ul class="location-list">
+        <li>Bilaichhari Bilaichhari</li>
+    </ul>
+
+    <!-- A R E A S of Boalkhali -->
+    <ul class="location-list">
+        <li>Boalkhali Charandwip</li>
+        <li>Boalkhali Iqbal Park</li>
+        <li>Boalkhali Kadurkhal</li>
+        <li>Boalkhali Kanungopara</li>
+        <li>Boalkhali Sadar</li>
+        <li>Boalkhali Sakpura</li>
+        <li>Boalkhali Saroatoli</li>
+    </ul>
+
+
+    <!-- A R E A S of Brahmanbaria -->
+    <ul class="location-list">
+        <li>Akhaura</li>
+        <li>Akhaura Gangasagar</li>
+        <li>Banchharampur</li>
+        <li>Bhadughar</li>
+        <li>Brahmanbaria Sadar</li>
+        <li>Brahmanbaria Sadar Ashuganj</li>
+        <li>Brahmanbaria Sadar Ashuganj Share</li>
+        <li>Brahmanbaria Sadar Poun</li>
+        <li>Brahmanbaria Sadar Talshahar</li>
+        <li>Gokarna Ghat</li>
+        <li>Hujur Bari</li>
+        <li>Natai</li>
+        <li>Suhilpur Bazar</li>
+    </ul>
+
+    <!-- A R E A S of Brahmanpara -->
+    <ul class="location-list">
+        <li>Brahmanpara Sadar</li>
+    </ul>
+
+
+    <!-- A R E A S of Burichang -->
+    <ul class="location-list">
+        <li>Adbarpur</li>
+        <li>Burichang Maynamoti bazar</li>
+        <li>Burichang Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Chandina -->
+    <ul class="location-list">
+        <li>Chandina Chandia</li>
+        <li>Chandina Madhaiabazar</li>
+        <li>Raj Kalibari</li>
+    </ul>
+
+    <!-- A R E A S of Chandpur -->
+    <ul class="location-list">
+        <li>Chandpur Sadar</li>
+        <li>Chandpur Sadar Baburhat</li>
+        <li>Chandpur Sadar Puranbazar</li>
+        <li>Chandpur Sadar Sahatali</li>
+    </ul>
+
+    <!-- A R E A S of Char Alexgander -->
+    <ul class="location-list">
+        <li>Char Alexgander Char Alexgander</li>
+        <li>Char Alexgander Hajirghat</li>
+        <li>Char Alexgander Ramgatirhat</li>
+    </ul>
+
+    <!-- A R E A S of Chatkhil -->
+    <ul class="location-list">
+        <li>Chatkhil Bansa Bazar</li>
+        <li>Chatkhil Bodalcourt</li>
+        <li>Chatkhil Dosh Gharia</li>
+        <li>Chatkhil Karihati</li>
+        <li>Chatkhil Khilpara</li>
+        <li>Chatkhil Palla</li>
+        <li>Chatkhil Rezzakpur</li>
+        <li>Chatkhil Sadar</li>
+        <li>Chatkhil Sahapur</li>
+        <li>Chatkhil Sampara</li>
+        <li>Chatkhil Shingbahura</li>
+        <li>Chatkhil Solla</li>
+    </ul>
+
+    <!-- A R E A S of Chattogram Sadar -->
+    <ul class="location-list">
+        <li>Agrabad</li>
+        <li>AK Khan</li>
+        <li>Al- Amin Baria Madra</li>
+        <li>Al- Amin Baria Madrasa</li>
+        <li>Amin Jute Mills</li>
+        <li>Anandabazar</li>
+        <li>Bayezid Bostami</li>
+        <li>Chandgaon</li>
+        <li>Chattogram Airport</li>
+        <li>Chattogram Bandar</li>
+        <li>Chattogram Cantonment</li>
+        <li>Chattogram Customs Acca</li>
+        <li>Chattogram GPO</li>
+        <li>Chattogram New Market</li>
+        <li>Chattogram Politechnic Institute</li>
+        <li>Chattogram Sailers Colony</li>
+        <li>Chawkbazar</li>
+        <li>Colonel Hat</li>
+        <li>Combined Military Hospital (CMH)</li>
+        <li>Dakkshin Pahartoli</li>
+        <li>Double Mooring</li>
+        <li>Export Processing</li>
+        <li>Firozshah</li>
+        <li>GEC</li>
+        <li>Jaldia Marine Academy</li>
+        <li>Khulshi</li>
+        <li>Kotwali</li>
+        <li>Middle Patenga</li>
+        <li>Mohard</li>
+        <li>Nasirabad</li>
+        <li>North Halishahar</li>
+        <li>North Kattali</li>
+        <li>Noyabazar</li>
+        <li>Oxygen</li>
+        <li>Pahartoli</li>
+        <li>Panchlaish</li>
+        <li>Patenga</li>
+        <li>Rampura TSO</li>
+        <li>Sadarghat</li>
+        <li>South Halishahar</li>
+        <li>South Kattali</li>
+        <li>Wazedia</li>
+    </ul>
+
+    <!-- A R E A S of Chhagalnaia -->
+    <ul class="location-list">
+        <li>Chhagalnaia Daraga Hat</li>
+        <li>Chhagalnaia Maharajganj</li>
+        <li>Chhagalnaia Puabashimulia</li>
+        <li>Chhagalnaia Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Chiringga -->
+    <ul class="location-list">
+        <li>Chiringga Badarkali</li>
+        <li>Chiringga Chiringga S.O</li>
+        <li>Chiringga Malumghat</li>
+        <li>Chiringga Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Chouddagram -->
+    <ul class="location-list">
+        <li>Chouddagram Batisa</li>
+        <li>Chouddagram Chiora</li>
+        <li>Chouddagram Chouddagram</li>
+    </ul>
+
+    <!-- A R E A S of Comilla -->
+    <ul class="location-list">
+        <li>Baro Para</li>
+        <li>Comilla Housing</li>
+        <li>Comilla Sadar</li>
+        <li>Comilla Sadar Comilla Contonment</li>
+        <li>Comilla Sadar Courtbari</li>
+        <li>Comilla Sadar Halimanagar</li>
+        <li>Comilla Sadar Suaganj</li>
+        <li>Dharmopur</li>
+        <li>Kandirpar</li>
+        <li>Kaptan Bazar</li>
+        <li>Paduar Bazar</li>
+        <li>Shashongachha</li>
+        <li>Tomsom Bridge</li>
+    </ul>
+
+    <!-- A R E A S of Coxs Bazar -->
+    <ul class="location-list">
+        <li>Baharchora</li>
+        <li>Bazarghata</li>
+        <li>Cox's Bazar Bus Terminal</li>
+        <li>Holiday Mor</li>
+        <li>Kolatoly</li>
+        <li>Laldighi Pa</li>
+        <li>Link Road</li>
+    </ul>
+
+    <!-- A R E A S of Dagonbhuia -->
+    <ul class="location-list">
+        <li>Dagonbhuia Chhilonia</li>
+        <li>Dagonbhuia Dagondhuia</li>
+        <li>Dagonbhuia Dudmukha</li>
+        <li>Dagonbhuia Rajapur</li>
+    </ul>
+
+    <!-- A R E A S of Daudkandi -->
+    <ul class="location-list">
+        <li>Daudkandi Dashpara</li>
+        <li>Daudkandi Daudkandi</li>
+        <li>Daudkandi Eliotganj</li>
+        <li>Daudkandi Gouripur</li>
+    </ul>
+
+    <!-- A R E A S of Davidhar -->
+    <ul class="location-list">
+        <li>Davidhar Barashalghar</li>
+        <li>Davidhar Davidhar</li>
+        <li>Davidhar Dhamtee</li>
+        <li>Davidhar Gangamandal</li>
+    </ul>
+
+    <!-- A R E A S of Diginala -->
+    <ul class="location-list">
+        <li>Diginala Sadar</li>
+    </ul>
+
+    <!-- A R E A S of East Joara -->
+    <ul class="location-list">
+        <li>East Joara Barma</li>
+        <li>East Joara Dohazari</li>
+        <li>East Joara East Joara</li>
+        <li>East Joara Gachbaria</li>
+    </ul>
+
+    <!-- A R E A S of Faridganj -->
+    <ul class="location-list">
+        <li>Faridganj Chandra</li>
+        <li>Faridganj Gridkaliandia</li>
+        <li>Faridganj Islampur Shah Isain</li>
+        <li>Faridganj Rampurbazar</li>
+        <li>Faridganj Rupsha</li>
+        <li>Faridganj Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Fatikchhari -->
+    <ul class="location-list">
+        <li>Fatikchhari Bhandar Sharif</li>
+        <li>Fatikchhari Fatikchhari</li>
+        <li>Fatikchhari Harualchhari</li>
+        <li>Fatikchhari Najirhat</li>
+        <li>Fatikchhari Nanupur</li>
+        <li>Fatikchhari Narayanhat</li>
+    </ul>
+
+    <!-- A R E A S of Feni -->
+    <ul class="location-list">
+        <li>Bhanga Takia Bazar Sharshadie</li>
+        <li>Cadet College</li>
+        <li>Court Buliding</li>
+        <li>Daud Pul</li>
+        <li>Feni Circuit House</li>
+        <li>Feni Police Line</li>
+        <li>Feni Polytechnic Institute</li>
+        <li>Feni Sadar</li>
+        <li>Feni Sadar Fazilpur</li>
+        <li>Feni Sadar Hospital</li>
+        <li>Feni Sadar Laskarhat</li>
+        <li>Feni Stadium</li>
+        <li>Feni University</li>
+        <li>Grand Trunk Road</li>
+        <li>Grand Trunk Road Squre</li>
+        <li>Hazir Bazar Post OfficeSharshadie</li>
+        <li>Ja Academy</li>
+        <li>Kalidaha- Laskarhat Rd</li>
+        <li>Khaiyara The Head</li>
+        <li>Lalpul</li>
+        <li>Laskarhat Post Office</li>
+        <li>Laskar Hat S C Laha Institution</li>
+        <li>Mastar Para</li>
+        <li>Mohipal</li>
+        <li>Panchgachia Bazar</li>
+        <li>Petro Bangla</li>
+        <li>Pirganj Laldigi</li>
+        <li>Rampur</li>
+        <li>Ranir Hat</li>
+        <li>Santi Company Road</li>
+        <li>Shodeb Pur</li>
+        <li>Shohid Selina Parvin Road</li>
+        <li>Tewmuhuni Bazar</li>
+        <li>Ukil Para</li>
+    </ul>
+
+    <!-- A R E A S of Gorakghat -->
+    <ul class="location-list">
+        <li>Gorakghat Gorakghat</li>
+    </ul>
+
+    <!-- A R E A S of Hajiganj -->
+    <ul class="location-list">
+        <li>Hajiganj Bolakhal</li>
+        <li>Hajiganj Hajiganj</li>
+    </ul>
+
+    <!-- A R E A S of Hathazari -->
+    <ul class="location-list">
+        <li>Hathazari Chitt.University</li>
+        <li>Hathazari Fatahabad</li>
+        <li>Hathazari Gorduara</li>
+        <li>Hathazari Hathazari</li>
+        <li>Hathazari Katirhat</li>
+        <li>Hathazari Madrasa</li>
+        <li>Hathazari Mirzapur</li>
+        <li>Hathazari Nuralibari</li>
+        <li>Hathazari Yunus Nagar</li>
+    </ul>
+
+    <!-- A R E A S of Hatiya -->
+    <ul class="location-list">
+        <li>Hatiya Afazia</li>
+        <li>Hatiya Sadar</li>
+        <li>Hatiya Tamoraddi</li>
+    </ul>
+
+    <!-- A R E A S of Hayemchar -->
+    <ul class="location-list">
+        <li>Hayemchar Gandamara</li>
+        <li>Hayemchar Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Homna -->
+    <ul class="location-list">
+        <li>Akhandapur</li>
+        <li>Homna Homna</li>
+        <li>Hujurkandi</li>
+        <li>Mohonpur</li>
+    </ul>
+
+    <!-- A R E A S of Jaldi -->
+    <ul class="location-list">
+        <li>Jaldi Banigram</li>
+        <li>Jaldi Gunagari</li>
+        <li>Jaldi Khan Bahadur</li>
+        <li>Jaldi Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Jarachhari -->
+    <ul class="location-list">
+        <li>Jarachhari Jarachhari</li>
+    </ul>
+
+    <!-- A R E A S of Kachua -->
+    <ul class="location-list">
+        <li>Kachua Pak Shrirampur</li>
+        <li>Kachua Rahima Nagar</li>
+        <li>Kachua Sadar</li>
+        <li>Kachua Shachar</li>
+    </ul>
+
+    <!-- A R E A S of Kalampati -->
+    <ul class="location-list">
+        <li>Kalampati Betbunia</li>
+        <li>Kalampati Kalampati</li>
+    </ul>
+
+    <!-- A R E A S of Kaptai -->
+    <ul class="location-list">
+        <li>Kaptai Chandraghona</li>
+        <li>Kaptai Kaptai Project</li>
+        <li>Kaptai Nuton Bazar</li>
+        <li>Kaptai Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Kasba -->
+    <ul class="location-list">
+        <li>Kasba Chandidar</li>
+        <li>Kasba Chargachh</li>
+        <li>Kasba Gopinathpur</li>
+        <li>Kasba Kuti</li>
+        <li>Kasba Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Khagrachari -->
+    <ul class="location-list">
+        <li>Khagrachari Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Kutubdia -->
+    <ul class="location-list">
+        <li>Kutubdia Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Laksam -->
+    <ul class="location-list">
+        <li>Laksam Bipulasar</li>
+        <li>Laksam Laksam</li>
+        <li>Laksam Lakshamanpur</li>
+    </ul>
+
+    <!-- A R E A S of Lakshmipur -->
+    <ul class="location-list">
+        <li>Lakshmipur Sadar</li>
+        <li>Lakshmipur Sadar Amani Lakshimpur</li>
+        <li>Lakshmipur Sadar Bhabaniganj</li>
+        <li>Lakshmipur Sadar Chandraganj</li>
+        <li>Lakshmipur Sadar Choupalli</li>
+        <li>Lakshmipur Sadar Dalal Bazar</li>
+        <li>Lakshmipur Sadar Duttapara</li>
+        <li>Lakshmipur Sadar Keramatganj</li>
+        <li>Lakshmipur Sadar Mandari</li>
+        <li>Lakshmipur Sadar Rupchara</li>
+    </ul>
+
+    <!-- A R E A S of Langalkot -->
+    <ul class="location-list">
+        <li>Langalkot Chhariabazar</li>
+        <li>Langalkot Dhalua</li>
+        <li>Langalkot Gunabati</li>
+        <li>Langalkot Langalkot</li>
+    </ul>
+
+    <!-- A R E A S of Laxmichhari -->
+    <ul class="location-list">
+        <li>Laxmichhari Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Lohagara -->
+    <ul class="location-list">
+        <li>Lohagara Chunti</li>
+        <li>Lohagara Lohagara</li>
+        <li>Lohagara Padua</li>
+    </ul>
+
+    <!-- A R E A S of Longachh -->
+    <ul class="location-list">
+        <li>Longachh Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Manikchhari -->
+    <ul class="location-list">
+        <li>Manikchhari Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Marishya -->
+    <ul class="location-list">
+        <li>Marishya Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Matiranga -->
+    <ul class="location-list">
+        <li>Matiranga Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Matiranga -->
+    <ul class="location-list">
+        <li>Matiranga Sadar</li>
+    </ul>
+
+    <!-- A R E A S of Matlobganj -->
+    <ul class="location-list">
+        <li>Matlobganj Kalipur</li>
+        <li>Matlobganj Mohanpur</li>
+        <li>Matlobganj Sadar</li>
+    </ul>
+
+
+    <!-- A R E A S of Mirsharai -->
+    <ul class="location-list">
+        <li>Mirsharai Abutorab</li>
+        <li>Mirsharai Azampur</li>
+        <li>Mirsharai Bharawazhat</li>
+        <li>Mirsharai Darrogahat</li>
+        <li>Mirsharai Joarganj</li>
+        <li>Mirsharai Korerhat</li>
+        <li>Mirsharai Mirsharai</li>
+        <li>Mirsharai Mohazanhat</li>
+    </ul>
+
+
+    <!-- A R E A S of Teknaf -->
+    <ul class="location-list">
+        <li>Teknaf Hnila</li>
+        <li>Teknaf Sadar</li>
+        <li>Teknaf St.Martin</li>
+    </ul>
+
+
+
+
 </body>
 
 </html>
