all upazila of Bangladesh

--- a/district.html
+++ b/district.html
@@ -11,16 +11,17 @@
 
 
 {"division":"Chattogram",
-"district":[{"name":"Brahmanbaaria"},
-            {"name":"Cumilla"},
+"district":[{"name":"Bandarban"},
+            {"name":"Brahmanbaria"},
             {"name":"Chandpur"},
-            {"name":"Lakshmipur"},
-            {"name":"Noakhali"},
+            {"name":"Chattogram"},
+            {"name":"Cumilla"},
+            {"name":"Cox's Bazar"},
             {"name":"Feni"},
             {"name":"Khagrachhari"},
-            {"name":"Bandarban"},
-            {"name":"Chattogram"},
-            {"name":"Cox's Bazar"}
+            {"name":"Lakshmipur"},
+            {"name":"Noakhali"},
+            {"name":"Rangamati"}
             ]
 }
 
