--- a/upazila.html
+++ b/upazila.html
@@ -1,5 +1,5 @@
 
-
+BARISHAL
 
 {"district":"Barguna",
 "upazila":[{"name":"Amtali"},
@@ -438,6 +438,13 @@ KHULNA
             ]
 }
 
+{"district":"Magura",
+"upazila":[{"name":"Magura Sadar"},
+            {"name":"Mohammadpur"},
+            {"name":"Shalikha"},
+            {"name":"Sreepur"}
+            ]
+}
 {"district":"Meherpur",
 "upazila":[{"name":"Gangni"},
             {"name":"Meherpur Sadar"},
@@ -508,7 +515,7 @@ MYMENSING
             {"name":"Gafargaon"},
             {"name":"Gauripur"},
             {"name":"Haluaghat"},
-            {"name":"Ishwarganj "},
+            {"name":"Ishwarganj"},
             {"name":"Mymensingh Sadar"},
             {"name":"Muktagachha"},
             {"name":"Nandail"},
@@ -518,143 +525,269 @@ MYMENSING
             ]
 }
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+
+RAJSHAHI
+
+{"district":"Joypurhat",
+"upazila":[{"name":"Akkelpur"},
+            {"name":"Joypurhat Sadar"},
+            {"name":"Kalai"},
+            {"name":"Khetlal"},
+            {"name":"Panchbibi"}
             ]
 }
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Bogura",
+"upazila":[{"name":"Adamdighi"},
+            {"name":"Bogura Sadar"},
+            {"name":"Dhunat"},
+            {"name":"Dhupchanchia"},
+            {"name":"Gabtali"},
+            {"name":"Kahaloo"},
+            {"name":"Nandigram"},
+            {"name":"Sariakandi"},
+            {"name":"Shajahanpur"},
+            {"name":"Sherpur"},
+            {"name":"Shibganj"},
+            {"name":"Sonatola"}
             ]
 }
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Naogaon",
+"upazila":[{"name":"Atrai"},
+            {"name":"Badalgachhi"},
+            {"name":"Manda"},
+            {"name":"Dhamoirhat"},
+            {"name":"Mohadevpur"},
+            {"name":"Naogaon Sadar"},
+            {"name":"Niamatpur"},
+            {"name":"Patnitala"},
+            {"name":"Porsha"},
+            {"name":"Raninagar"},
+            {"name":"Sapahar"}
             ]
 }
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Natore",
+"upazila":[{"name":"Bagatipara"},
+            {"name":"Baraigram"},
+            {"name":"Gurudaspur"},
+            {"name":"Lalpur"},
+            {"name":"Natore Sadar"},
+            {"name":"Singra"},
+            {"name":"Naldanga"}
             ]
 }
 
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Nawabganj",
+"upazila":[{"name":"Bholahat"},
+            {"name":"Gomastapur"},
+            {"name":"Nachole"},
+            {"name":"Nawabganj Sadar"},
+            {"name":"Shibganj"}
             ]
 }
 
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Pabna",
+"upazila":[{"name":"Atgharia"},
+            {"name":"Bera"},
+            {"name":"Bhangura"},
+            {"name":"Chatmohar"},
+            {"name":"Faridpur"},
+            {"name":"Ishwardi"},
+            {"name":"Pabna Sadar"},
+            {"name":"Santhia"},
+            {"name":"Sujanagar"}
             ]
 }
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Sirajganj",
+"upazila":[{"name":"Belkuchi"},
+            {"name":"Chauhali"},
+            {"name":"Kamarkhanda"},
+            {"name":"Kazipur"},
+            {"name":"Raiganj"},
+            {"name":"Shahjadpur"},
+            {"name":"Sirajganj Sadar"},
+            {"name":"Tarash"},
+            {"name":"Ullahpara"}
             ]
 }
 
 
-{"district":"",
-"upazila":[{"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""},
-            {"name":""}
+{"district":"Rajshahi",
+"upazila":[{"name":"Bagha"},
+            {"name":"Bagmara"},
+            {"name":"Charghat"},
+            {"name":"Durgapur"},
+            {"name":"Godagari"},
+            {"name":"Mohanpur"},
+            {"name":"Paba"},
+            {"name":"Puthia"},
+            {"name":"Tanore"}
             ]
 }
+
+RANGPUR
+{"district":"Dinajpur",
+"upazila":[{"name":"Birampur"},
+            {"name":"Birganj"},
+            {"name":"Biral"},
+            {"name":"Bochaganj"},
+            {"name":"Chirirbandar"},
+            {"name":"Phulbari"},
+            {"name":"Ghoraghat"},
+            {"name":"Hakimpur"},
+            {"name":"Kaharole"},
+            {"name":"Khansama"},
+            {"name":"Dinajpur Sadar"},
+            {"name":"Nawabganj"},
+            {"name":"Parbatipur"}
+            ]
+}
+
+
+{"district":"Gaibandha",
+"upazila":[{"name":"Phulchhari"},
+            {"name":"Gaibandha Sadar"},
+            {"name":"Gobindaganj"},
+            {"name":"Palashbari"},
+            {"name":"Sadullapur"},
+            {"name":"Sughatta"},
+            {"name":"Sundarganj"}
+            ]
+}
+
+
+{"district":"Kurigram",
+"upazila":[{"name":"Bhurungamari"},
+            {"name":"Char Rajibpur"},
+            {"name":"Chilmari"},
+            {"name":"Phulbari"},
+            {"name":"Kurigram Sadar"},
+            {"name":"Nageshwari"},
+            {"name":"Rajarhat"},
+            {"name":"Raomari"},
+            {"name":"Ulipur"}
+            ]
+}
+
+
+{"district":"Lalmonirhat",
+"upazila":[{"name":"Aditmari"},
+            {"name":"Hatibandha"},
+            {"name":"Kaliganj"},
+            {"name":"Lalmonirhat Sadar"},
+            {"name":"Patgram"}
+            ]
+}
+
+
+{"district":"Nilphamari",
+"upazila":[{"name":"Dimla"},
+            {"name":"Domar"},
+            {"name":"Jaldhaka"},
+            {"name":"Kishoreganj"},
+            {"name":"Nilphamari Sadar"},
+            {"name":"Saidpur"}
+            ]
+}
+
+
+{"district":"Panchagarh",
+"upazila":[{"name":"Atwari"},
+            {"name":"Boda"},
+            {"name":"Debiganj"},
+            {"name":"Panchagarh Sadar"},
+            {"name":"Tetulia"}
+            ]
+}
+
+
+{"district":"Rangpur",
+"upazila":[{"name":"Badarganj"},
+            {"name":"Gangachhara"},
+            {"name":"Kaunia"},
+            {"name":"Rangpur Sadar"},
+            {"name":"Mithapukur"},
+            {"name":"Pirgachha"},
+            {"name":"Pirganj"},
+            {"name":"Taraganj"}
+            ]
+}
+
+
+{"district":"Thakurgaon",
+"upazila":[{"name":"Baliadangi"},
+            {"name":"Haripur"},
+            {"name":"Pirganj"},
+            {"name":"Ranisankail"},
+            {"name":"Thakurgaon Sadar"}
+            ]
+}
+
+SYLHET
+
+{"district":"Habiganj",
+"upazila":[{"name":"Ajmiriganj"},
+            {"name":"Bahubal"},
+            {"name":"Baniyachong"},
+            {"name":"Chunarughat"},
+            {"name":"Habiganj Sadar"},
+            {"name":"Lakhai"},
+            {"name":"Madhabpur"},
+            {"name":"Nabiganj"},
+            {"name":"Shayestaganj"}
+            ]
+}
+
+
+{"district":"Moulvibazar",
+"upazila":[{"name":"Barlekha"},
+            {"name":"Juri"},
+            {"name":"Kamalganj"},
+            {"name":"Kulaura"},
+            {"name":"Moulvibazar Sadar"},
+            {"name":"Rajnagar"},
+            {"name":"Sreemangal"}
+            ]
+}
+
+{"district":"Sunamganj",
+"upazila":[{"name":"Bishwamvarpur"},
+            {"name":"Chhatak"},
+            {"name":"Shantiganj"},
+            {"name":"Derai"},
+            {"name":"Dharamapasha"},
+            {"name":"Dowarabazar"},
+            {"name":"Jagannathpur"},
+            {"name":"Jamalganj"},
+            {"name":"Sullah"},
+            {"name":"Sunamganj Sadar"},
+            {"name":"Tahirpur"},
+            {"name":"Madhyanagar"}
+            ]
+}
+
+{"district":"Sylhet",
+"upazila":[{"name":"Balaganj"},
+            {"name":"Beanibazar"},
+            {"name":"Bishwanath"},
+            {"name":"Companigonj"},
+            {"name":"Dakshin Surma"},
+            {"name":"Fenchuganj"},
+            {"name":"Golapganj"},
+            {"name":"Gowainghat"},
+            {"name":"Jaintiapur"},
+            {"name":"Kanaighat"},
+            {"name":"Osmani Nagar"},
+            {"name":"Sylhet Sadar"},
+            {"name":"Zakiganj"}
+            ]
+}
+
+
 
 
