all upazila of Bangladesh 002

--- a/upazila.html
+++ b/upazila.html
@@ -1,5 +1,4 @@
-
-BARISHAL
+<!-- BARISHAL -->
 
 {"district":"Barguna",
 "upazila":[{"name":"Amtali"},
@@ -68,7 +67,7 @@ BARISHAL
 }
 
 
-CHITTAGONG
+<!-- CHITTAGONG -->
 
 {"district":"Bandarban",
 "upazila":[{"name":"Ali Kadam"},
@@ -219,7 +218,7 @@ CHITTAGONG
 
 
 
-DHAKA
+<!-- DHAKA -->
 
 {"district":"Dhaka",
 "upazila":[{"name":"Dhamrai"},
@@ -366,7 +365,7 @@ DHAKA
             ]
 }
 
-KHULNA 
+<!-- KHULNA  -->
 
 {"district":"Bagerhat",
 "upazila":[{"name":"Bagerhat Sadar"},
@@ -472,7 +471,7 @@ KHULNA
 }
 
 
-MYMENSING
+<!-- MYMENSING -->
 
 {"district":"Netrokona",
 "upazila":[{"name":"Atpara"},
@@ -526,7 +525,7 @@ MYMENSING
 }
 
 
-RAJSHAHI
+<!-- RAJSHAHI -->
 
 {"district":"Joypurhat",
 "upazila":[{"name":"Akkelpur"},
@@ -630,7 +629,7 @@ RAJSHAHI
             ]
 }
 
-RANGPUR
+<!-- RANGPUR -->
 {"district":"Dinajpur",
 "upazila":[{"name":"Birampur"},
             {"name":"Birganj"},
@@ -728,7 +727,7 @@ RANGPUR
             ]
 }
 
-SYLHET
+<!-- SYLHET -->
 
 {"district":"Habiganj",
 "upazila":[{"name":"Ajmiriganj"},
